--- a/index.html
+++ b/index.html
@@ -36,5 +36,27 @@
         <img src="images/jhankar.png" alt="" />
       </div>
     </section>
+
+    <section class="dream">
+      <div class="helf-width">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Like a Champion</h1>
+        <h3>Become a Web Developer with Peter Parker</h3>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.programming-hero.com/"
+        >
+          DOWNLOAD RESUME
+        </a>
+      </div>
+    </section>
   </body>
 </html>
