--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="Top-bannar">
+    <section class="Top-bannar flexible-container">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">Peter Parker</span> World !</h1>
@@ -37,7 +37,7 @@
       </div>
     </section>
 
-    <section class="dream">
+    <section class="dream flexible-container">
       <div class="helf-width">
         <img src="images/jhankar2.png" alt="" />
       </div>
@@ -56,6 +56,33 @@
         >
           DOWNLOAD RESUME
         </a>
+      </div>
+    </section>
+
+    <section class="Expareance">
+      <center><h1>My Expareance</h1></center>
+      <div class="flexible-container">
+        <div class="half-width">
+          <h1>FUll Stak Web developer</h1>
+          <h3>2021-Present | Pro Level Developer</h3>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution so don't you worry just contract me.
+          </p>
+        </div>
+        <div class="half-width">
+          <h1>Junior Web Developer</h1>
+          <h3>2020-2021 | Programming Hero Learner</h3>
+          <p>
+            First time they though I was not good enough for there company. They
+            didn't offer me a job. But I made myself as a remote web developer.
+            I made their website and showed it to them. They liked it. And
+            uploaded the content. It was fun working at Programming Hero.
+          </p>
+        </div>
       </div>
     </section>
   </body>
