--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
       </div>
     </section>
 
-    <section class="Expareance">
-      <center><h1>My Expareance</h1></center>
+    <section class="expareance">
+      <h1 id="expareance">My Expareance</h1>
       <div class="flexible-container">
-        <div class="half-width">
-          <h1>FUll Stak Web developer</h1>
-          <h3>2021-Present | Pro Level Developer</h3>
+        <div id="full-stak-devoloper" class="expareance-box">
+          <h2>FUll Stak Web developer</h2>
+          <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
           <p>
             I am the master of HTML, CSS and Javascript. I know everything
             needed to make a website function, efficient. I didn't stop with the
@@ -73,9 +73,9 @@
             100% web solution so don't you worry just contract me.
           </p>
         </div>
-        <div class="half-width">
-          <h1>Junior Web Developer</h1>
-          <h3>2020-2021 | Programming Hero Learner</h3>
+        <div id="junior-web-developer" class="expareance-box">
+          <h2>Junior Web Developer</h2>
+          <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
           <p>
             First time they though I was not good enough for there company. They
             didn't offer me a job. But I made myself as a remote web developer.
@@ -85,5 +85,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>© Copyright by Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
   </body>
 </html>
